# cropto1_bs

./: Makefile.in  cmdhfmfhard.c  cmdhfmfhard.h  configure.ac  main.c  ui.c  ui.h  util.c
hardnested/: hardnested_bruteforce.c
